# pycstl

./: .bazelignore  .bazelrc  .clang-format  .clang-format copy  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  Dockerfile  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  build.py  help.md  make  package.json  pnpm-lock.yaml  requirements.in  requirements.txt  requirements_lock.txt  test.cpp
chat/client/: BUILD.bazel  main.cpp
chat/client/src/: api.cpp  http_mgr.cpp  tcp_mgr.cpp  url_mgr.cpp  user_mgr.cpp
chat/client/style/: stylesheet.qss
chat/client/widget/: BUILD.bazel  apply_friend_dialog.ui  apply_friend_item.ui  apply_friend_page.ui  auth_friend_dialog.ui  chat_dialog.ui  chat_page.ui  chat_user_widget.ui  contact_user_item.ui  find_fail_dialog.ui  find_success_dialog.ui  friend_info_page.ui  friend_label.ui  group_tip_item.ui  loading_dialog.ui  login_dialog.ui  mainwindow.ui  register_dialog.ui  reset_dialog.ui  widgets.bzl
chat/client/widgets/: BUILD.bazel  login_dialog.cpp  login_dialog.h  login_dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  register_dialog.cpp  register_dialog.h  register_dialog.ui
co_async/: BUILD.bazel
co_async/example/: BUILD.bazel  exception_handle.cpp  simple_when_all.cpp  sleep_for.cpp  variant_result.cpp  when_all.cpp  when_any.cpp
co_async/include/co_async/: sleep.h  task.h  timer_loop.h  when_all.h  when_any.h
co_async/src/: timer_loop.cpp
co_async/test/: BUILD.bazel  exception_handle_test.cpp  sleep_for_test.cpp  template_task_test.cpp  utils.h  when_all_test.cpp  when_any_test.cpp
common/: BUILD.bazel
common/include/common/: allocator_wrapper.h  cin_redirect.h  connection_pool.h  json.h  noncopyable.h  reflect.h  singleton.h  string_hash.h  thread_id.h  timer.h  utils.h
common/src/: timer.cpp  utils.cpp
common/test/: BUILD.bazel  json_test.cpp
concurrency/: BUILD.bazel
concurrency/doc/: doc.md
concurrency/include/concurrency/: channel.h  double_push_list.h  interruptible_thread.h  lock_free_stack.h  memory_order.h  parallel_algorithm.h  sorter.h  spin_lock.h  thread_pool.h  thread_safe_list.h  thread_safe_queue.h  thread_safe_stack.h
concurrency/src/: interruptible_thread.cpp  thread_pool.cpp
concurrency/test/: BUILD.bazel  channel_test.cpp  circular_queue_test.cpp  future_test.cpp  interruptible_thread_test.cpp  lock_free_queue_test.cpp  lock_free_stack_test.cpp  memory_order_test.cpp  mutex_test.cpp  my_class.h  parallel_algorithm_test.cpp  quick_sort_test.cpp  spin_lock_test.cpp  thread_pool_test.cpp  thread_safe_adaptor_test.cpp  thread_safe_hash_table_test.cpp  thread_safe_list_test.cpp  thread_test.cpp  utils.h
coroutine/: BUILD.bazel
coroutine/example/: BUILD.bazel  exception_handle.cpp  sleep_for.cpp  template_task.cpp  variant_result.cpp  when_all.cpp
coroutine/test/: BUILD.bazel
cpp20_stl/: 1.2.format_test.cpp  1.3.constexpr_test.cpp  1.4.cmp_test.cpp  1.5.three_way_comparison_test.cpp  1.7.concept_and_constraint_test.cpp  1.9.ranges_views_test.cpp  10.filesystem_test.cpp  11.other_test.cpp  2.1.span_test.cpp  2.5.template_argument_deduction_test.cpp  3.11.rpn_test.cpp  3.12.word_counter_test.cpp  3.13.long_sentence_test.cpp  3.3.erase_remove_test.cpp  3.6.sorted_vector_test.cpp  3.7.map_test.cpp  4.3.iterator_ranges_test.cpp  4.6.fib_generator_test.cpp  4.9.zip_iterator_test.cpp  5.lambda_test.cpp  6.algorithm_test.cpp  7.string_test.cpp  8.util_test.cpp  BUILD.bazel  utils.h
cpp20_stl/resource/: sentences.txt  the-end.html
logger/: BUILD.bazel
logger/include/logger/: logger.h
logger/src/: logger.cpp
logger/test/: BUILD.bazel  logger_test.cpp
monkey/: BUILD.bazel
monkey/bench/: BUILD.bazel  fibonacci.cpp  fibonacci.py  report.md
monkey/monkey/: macro.h  monkey.cpp
monkey/monkey/ast/: ast.cpp  ast.h
monkey/monkey/code/: code.cpp  code.h
monkey/monkey/compiler/: compiler.cpp  compiler.h  symbol_table.cpp  symbol_table.h
monkey/test/: BUILD.bazel  ast_test.cpp  code_test.cpp  compiler_test.cpp  evaluator_test.cpp  lexer_test.cpp  object_test.cpp  parser_test.cpp  symbol_table_test.cpp  test_define.h  vm_test.cpp
network/: BUILD.bazel  HTTPHead.md
network/example/: BUILD.bazel  async_api.cpp  async_api.h  async_io_service_pool_server.cpp  async_server.cpp  async_server_std_signal.cpp  async_server_thread_pool.cpp  async_thread_pool_server.cpp  concurrency_client.cpp  coroutine_server.cpp  grpc_client.cpp  grpc_concurrency_client.cpp  grpc_server.cpp  http_client.cpp  http_server.cpp  simple_coroutine_server.cpp  sync_api.cpp  sync_api.h  sync_client.cpp  sync_server.cpp  test_client.cpp  test_client_json.cpp  test_client_protobuf.cpp  websocket_server.cpp
network/proto/: BUILD.bazel  greeter.proto  msg.proto
network/src/: endpoint.cpp  io_service_pool.cpp  io_service_pool_server.cpp  logic_system.cpp  msg_node.cpp  server.cpp  session.cpp  thread_pool.cpp  thread_pool_server.cpp  utils.cpp
network/test/: BUILD.bazel  endpoint_test.cpp  json_test.cpp  protobuf_test.cpp
pycstl/: BUILD.bazel
pycstl/test/: BUILD.bazel  array_test.cpp  function_test.cpp  joining_thread_test.cpp  list_test.cpp  optional_test.cpp  shared_ptr_test.cpp  unique_ptr_test.cpp  utils.h  variant_test.cpp  vector_test.cpp
qt/99table/: BUILD.bazel  main.cpp
qt/notepad/: BUILD.bazel  main.cpp
sdl2/: BUILD.bazel
sdl2/chicken_evil/: BUILD.bazel
sdl2/common/: BUILD.bazel
sdl2/demo/: BUILD.bazel  main.cpp
sdl2/shooter/: BUILD.bazel
sdl3/: BUILD.bazel
sdl3/common/: BUILD.bazel
sdl3/demo/: BUILD.bazel  main.cpp
sdl3/ghost_escape/: BUILD.bazel  uml.md
sdl3/sunny_land/: BUILD.bazel  Tiled地图解析思路.md
tests/: CMakeLists.txt  test_array.cpp  test_function.cpp  test_unique_ptr.cpp  test_vector.cpp
tetris/: BUILD.bazel
tetris/doc/: tetriz.map
tetris/resource/: map.txt
tetris/src/: control.cpp  draw.cpp  engine.cpp  game.cpp  piece.cpp  terminal.cpp  tetris.cpp  utils.cpp  window.cpp
tiny_db/: BUILD.bazel
tiny_db/src/: machine.cpp  pager.cpp  parser.cpp  row.cpp  table.cpp  tiny_db.cpp
tiny_db/test/: BUILD.bazel  db_test.py
(+639 files in other folders)
