load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

_ALL_CONTENT = """\
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""

git_repository(
    name = "sdl2",
    build_file_content = _ALL_CONTENT,
    remote = "https://github.com/libsdl-org/SDL.git",
    tag = "release-2.30.11",
)

git_repository(
    name = "sdl2_image",
    build_file_content = _ALL_CONTENT,
    remote = "https://github.com/libsdl-org/SDL_image.git",
    tag = "release-2.8.4",
)

git_repository(
    name = "sdl2_mixer",
    build_file_content = _ALL_CONTENT,
    remote = "https://github.com/libsdl-org/SDL_mixer.git",
    tag = "release-2.6.3",
)

git_repository(
    name = "sdl2_ttf",
    build_file_content = _ALL_CONTENT,
    remote = "https://github.com/libsdl-org/SDL_ttf.git",
    tag = "release-2.0.18",
)
