load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

_ALL_CONTENT = """\
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""

#-------------------------------------------------------------------------------------
# SDL2/SDL3
#-------------------------------------------------------------------------------------

git_repository(
    name = "sdl2",
    build_file_content = _ALL_CONTENT,
    remote = "https://github.com/libsdl-org/SDL.git",
    tag = "release-2.32.10",
)

git_repository(
    name = "sdl2_image",
    build_file_content = _ALL_CONTENT,
    init_submodules = True,
    remote = "https://github.com/libsdl-org/SDL_image.git",
    tag = "release-2.8.8",
)

git_repository(
    name = "sdl2_mixer",
    build_file_content = _ALL_CONTENT,
    init_submodules = True,
    remote = "https://github.com/libsdl-org/SDL_mixer.git",
    tag = "release-2.8.1",
)

git_repository(
    name = "sdl2_ttf",
    build_file_content = _ALL_CONTENT,
    init_submodules = True,
    remote = "https://github.com/libsdl-org/SDL_ttf.git",
    tag = "release-2.24.0",
)

git_repository(
    name = "sdl3",
    build_file_content = _ALL_CONTENT,
    remote = "https://github.com/libsdl-org/SDL.git",
    tag = "release-3.2.26",
)

git_repository(
    name = "sdl3_image",
    build_file_content = _ALL_CONTENT,
    init_submodules = True,
    remote = "https://github.com/libsdl-org/SDL_image.git",
    tag = "release-3.2.4",
)

git_repository(
    name = "sdl3_mixer",
    build_file_content = _ALL_CONTENT,
    commit = "e777b524e8f854c6c6590e2b5766bb1cee52e016",
    init_submodules = True,
    remote = "https://github.com/libsdl-org/SDL_mixer.git",
)

git_repository(
    name = "sdl3_ttf",
    build_file_content = _ALL_CONTENT,
    init_submodules = True,
    remote = "https://github.com/libsdl-org/SDL_ttf.git",
    tag = "release-3.2.2",
)

#-------------------------------------------------------------------------------------
# Qt6
#-------------------------------------------------------------------------------------

git_repository(
    name = "rules_qt",
    commit = "f43d76ab1d3b60bd494e871f4f1042a351bfcff8",
    remote = "https://github.com/Vertexwahn/rules_qt6.git",
)

load("@rules_qt//:fetch_qt.bzl", "fetch_qt6")

fetch_qt6()

load("@rules_qt//tools:qt_toolchain.bzl", "register_qt_toolchains")

register_qt_toolchains()
