load("//build_defs:cpp_opts.bzl", "STRICT_COPTS")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

cc_library(
    name = "co_async",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["include/co_async/**/*.h"]),
    copts = STRICT_COPTS,
    includes = ["include"],
    deps = [
        "//common",
        "//logger",
    ],
)
