package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

cc_library(
    name = "common",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["include/common/*.h"]),
    copts = [
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wno-unknown-pragmas",
    ],
    includes = ["include"],
    deps = ["@fmt"],
)
