load("//build_defs:cpp_opts.bzl", "COPTS")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

cc_library(
    name = "common",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["include/common/*.h"]),
    copts = COPTS,
    includes = ["include"],
    deps = ["@fmt"],
)
