load("//build_defs:cpp_opts.bzl", "STRICT_COPTS")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

cc_library(
    name = "concurrency",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["include/concurrency/**/*.h"]),
    copts = STRICT_COPTS,
    includes = ["include"],
    linkopts = ["-latomic"],
    deps = [
        "//common",
        "@fmt",
    ],
)
