load("//build_defs:cpp_opts.bzl", "STRICT_COPTS")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

cc_library(
    name = "logger",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["include/logger/**/*.h"]),
    copts = STRICT_COPTS,
    includes = ["include"],
    deps = [
        "//common",
        "@fmt",
    ],
)
