package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

cc_library(
    name = "network",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["include/network/**/*.h"]),
    copts = [
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wno-unknown-pragmas",
    ],
    includes = ["include"],
    deps = [
        "//common",
        "//network/proto:msg_cc_proto",
        "@boost//:asio",
        "@boost//:beast",
        "@boost//:uuid",
        "@fmt",
        "@nlohmann_json//:json",
    ],
)
