load("//build_defs:cpp_opts.bzl", "STRICT_COPTS")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

cc_library(
    name = "network",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["include/network/**/*.h"]),
    copts = STRICT_COPTS,
    includes = ["include"],
    deps = [
        "//common",
        "//network/proto:greeter_cc_grpc",
        "//network/proto:msg_cc_proto",
        "@boost//:asio",
        "@boost//:beast",
        "@boost//:uuid",
        "@com_github_grpc_grpc//:grpc++",
        "@fmt",
        "@nlohmann_json//:json",
    ],
)
