package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

cc_library(
    name = "pycstl",
    hdrs = glob(["include/pycstl/*.h"]),
    copts = [
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wno-unknown-pragmas",
    ],
    includes = [
        ".",
        "include",
    ],
    deps = ["@fmt"],
)
