load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

# sdl2
configure_make(
    name = "sdl2",
    env = {
        "PKG_CONFIG": "/usr/bin/pkg-config",
    },
    includes = ["SDL2"],
    lib_source = "@sdl2//:all_srcs",
    out_static_libs = ["libSDL2.a"],
    visibility = ["//visibility:public"],
)

configure_make(
    name = "sdl2_image",
    includes = ["SDL2"],
    lib_source = "@sdl2_image//:all_srcs",
    out_static_libs = ["libSDL2_image.a"],
    visibility = ["//visibility:public"],
    deps = ["sdl2"],
)

configure_make(
    name = "sdl2_mixer",
    includes = ["SDL2"],
    lib_source = "@sdl2_mixer//:all_srcs",
    out_static_libs = ["libSDL2_mixer.a"],
    visibility = ["//visibility:public"],
    deps = ["sdl2"],
)

configure_make(
    name = "sdl2_ttf",
    includes = ["SDL2"],
    lib_source = "@sdl2_ttf//:all_srcs",
    out_static_libs = ["libSDL2_ttf.a"],
    visibility = ["//visibility:public"],
    deps = ["sdl2"],
)
