load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

cmake(
    name = "sdl2",
    cache_entries = {"SDL_STATIC_ENABLED_BY_DEFAULT": "OFF"},
    generate_args = ["-GNinja"],
    includes = ["SDL2"],
    lib_source = "@sdl2//:all_srcs",
    out_shared_libs = [
        "libSDL2-2.0d.so",
        "libSDL2-2.0d.so.0",
    ],
    visibility = ["//visibility:public"],
)

cmake(
    name = "sdl2_image",
    cache_entries = {
        "SDL2IMAGE_VENDORED": "ON",
        "SDL2IMAGE_AVIF": "OFF",  # disable for ninja compile error
    },
    # data = ["@nasm"],
    # env = {
    #     "ASM_NASM": "$(execpath @nasm//:nasm)",
    # },
    generate_args = ["-GNinja"],
    lib_source = "@sdl2_image//:all_srcs",
    out_shared_libs = [
        "libSDL2_image-2.0d.so",
        "libSDL2_image-2.0d.so.0",
    ],
    visibility = ["//visibility:public"],
    deps = ["sdl2"],
)

cmake(
    name = "sdl2_mixer",
    cache_entries = {"SDL2MIXER_VENDORED": "ON"},
    generate_args = ["-GNinja"],
    lib_source = "@sdl2_mixer//:all_srcs",
    out_shared_libs = [
        "libSDL2_mixer-2.0d.so",
        "libSDL2_mixer-2.0d.so.0",
    ],
    visibility = ["//visibility:public"],
    deps = ["sdl2"],
)

cmake(
    name = "sdl2_ttf",
    cache_entries = {"SDL2TTF_VENDORED": "ON"},
    generate_args = ["-GNinja"],
    lib_source = "@sdl2_ttf//:all_srcs",
    out_shared_libs = [
        "libSDL2_ttf-2.0d.so",
        "libSDL2_ttf-2.0d.so.0",
    ],
    visibility = ["//visibility:public"],
    deps = ["sdl2"],
)
