load("//build_defs:cpp_opts.bzl", "COPTS")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

cc_binary(
    name = "tetris",
    srcs = glob([
        "src/*.cpp",
        "include/tetris/*.h",
    ]),
    copts = COPTS,
    data = glob(["resource/**"]),
    includes = ["include"],
    deps = [
        "//common",
        "@fmt",
    ],
)
