load("//build_defs:cpp_opts.bzl", "COPTS")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

cc_binary(
    name = "tiny_db",
    srcs = glob([
        "src/*.cpp",
        "include/tiny_db/*.h",
    ]),
    copts = COPTS,
    includes = ["include"],
    deps = ["@fmt"],
)
